changed spelling of offering

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="column">
               <a href=""><img src="services.jpg"alt=""></a>
-              <a href="">Offering services</a>  
+              <a href="">offering services</a>  
             </div>
         </div>
     </div>
