--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navlist">
         <ul>
-            <li><h4>TMC.</h4></li>
+            <li><h4>HAC</h4></li>
             <li><a href="">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="templates.html">TEMPLATES</a></li>
