Made various new files for new codes and added new photos

--- a/templates.html
+++ b/templates.html
@@ -22,12 +22,12 @@
     <div class="class-box">
         <div class="row">
             <div class="column">
-              <a href=""><img src="ecommerce.jpg"alt=""></a>
+              <a href=""><img src="newecommerse.jpg"alt=""></a>
               <a href="">Ecommerce website</a>  
             </div>
             <div class="column">
-              <a href=""><img src="educational.jpg"alt=""></a>
-              <a href="">Educational website</a>  
+              <a href="educational.html"><img src="neweducational.jpg"alt=""></a>
+              <a href="educational.html">Educational website</a>  
             </div>
             <div class="column">
               <a href=""><img src="portfolio.jpg"alt=""></a>
@@ -39,16 +39,16 @@
     <div class="class-box">
         <div class="row">
     <div class="column">
-        <a href=""><img src="blog.jpg"alt=""></a>
+        <a href=""><img src="newblog.jpg "alt=""></a>
         <a href="">Blog website</a>  
       </div>
       <div class="column">
-        <a href=""><img src="wiki.jpg"alt=""></a>
+        <a href=""><img src="newwiki.jpg"alt=""></a>
         <a href="">Wiki or knowledge website</a>  
       </div>
       <div class="column">
-        <a href=""><img src="corporate.jpg"alt=""></a>
-        <a href="">Corporate website</a>  
+        <a href=""><img src="newcorporate.jpg"alt=""></a>
+        <a href="bussiness.html">Corporate website</a>  
       </div>
     </div>
 </div>
