--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="website.css">
+    <body background = "background.jpeg">
     <body background = "newbackgorund.jpg"></body>
     <title>WEBSITE BUILDER</title>
 </head>
@@ -22,7 +23,7 @@
             
         <h1>WEBSITE BUILDER</h1>
         <p>Create your own website easily</p>
-        <button><a href="">CREATE</a></button>
+        <button><a href="templates.html">CREATE</a></button>
     </div>
     <div class="content-box">
         <h2>EXPLORE</h2>
