--- a/bussiness.html
+++ b/bussiness.html
@@ -3,9 +3,27 @@
 <html>
 <head>
     <title>Business Website Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="website.css">
+    <style>
+    .container{
+    width: 100%;
+    height: 80vh;
+    padding-top: 25vh;
+    background-image: linear-gradient(#b57b7bc3,#000000c3), url(bussinessbackground.jpg );
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+    color: #f0eded;
+}
+.container button:hover{
+    background: rgba(241, 241, 242, 0.9);
+}
+
+    </style>
 </head>
 <body>
+    <div class="container">
     <h1>Create Your Business Website</h1>
     <form action="/generate" method="POST" enctype="multipart/form-data">
         <label for="business_name">Business Name:</label>
@@ -18,6 +36,8 @@
         <input type="file" name="photo" accept="image/*"><br>
 
         <button type="submit">Generate Website</button>
+
     </form>
+    </div>
 </body>
 </html>
