added new files for generating websites

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body background = "background.jpeg">
     <body background = "newbackgorund.jpg"></body>
     <title>WEBSITE BUILDER</title>
+    <script defer src="web.js"></script>
 </head>
 <body>
     <nav class="navlist">
