--- a/templates.html
+++ b/templates.html
@@ -47,8 +47,8 @@
         <a href="">Wiki or knowledge website</a>  
       </div>
       <div class="column">
-        <a href=""><img src="newcorporate.jpg"alt=""></a>
-        <a href="bussiness.html">Corporate website</a>  
+        <a href="index1.html"><img src="newcorporate.jpg"alt=""></a>
+        <a href="index1.html">Corporate website</a>  
       </div>
     </div>
 </div>
