--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="sub-navlist">
         <ul>
-            <li><h4>TMC.</h4></li>
+            <li><h4>HAC</h4></li>
             <li><a href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="templates.html">TEMPLATES</a></li>
